2004-11-12  Geoffrey Hutchison  <geoff@geoffhutchison.net>

	* src/openbabel.i: Initial SWIG interface file.

	* src/openbabel.py, src/openbabel_wrap.cxx: Generated by SWIG
	1.3.23 and hand-modified to compile cleanly.

2004-10-20  Geoffrey Hutchison  <geoff@geoffhutchison.net>

	* Fix problems caused by incomplete branching for the new
	framework merge.

2004-10-04  Michael Banck  <mbanck@gmx.net>

	* src/crk.cpp: Use sstream if present and strstream if not.
	
2004-28-30  Fabien Fontaine  <ffontaine@imim.es>

	* tools/obtanimoto.cpp : new tool
	* tools/README:      update
	* tools/makefile.am  update

2004-27-30  Fabien Fontaine  <ffontaine@imim.es>

	* src/fingerprint.cpp: New output format
	* src/fingerprint.h
	* src/Makefile.am (libopenbabel_la_SOURCES): Added fingerprint.cpp.
	* src/data.cpp (TextToType): Added FINGERPRINT typestring.
	* src/data.h (io_type): Added FINGERPRINT.
	* src/extable.txt: Added fingerprint entry for writing.
	* src/extable.h: Regenerated.
	* src/fileformat.cpp (ReadMolecule): Added fingerprint handler.
	(WriteMolecule): Likewise.
	* src/fileformat.h (WriteFingerprint): Declare it.
	
2004-09-10  Michael Banck  <mbanck@gmx.net>

	* src/turbomole.cpp: New file.
	* src/Makefile.am (libopenbabel_la_SOURCES): Added turbomole.cpp.
	* src/data.cpp (TextToType): Added TURBOMOLE typestring.
	* src/data.h (io_type): Added TURBOMOLE.
	* src/extable.txt: Added turbomole entry for reading and writing.
	* src/extable.h: Regenerated.
	* src/fileformat.cpp (ReadMolecule): Added Turbomole handler.
	(WriteMolecule): Likewise.
	* src/fileformat.h (ReadTurbomole): Declare it.
	(WriteTurbomole): Likewise.

2004-08-30  Fabien Fontaine  <ffontaine@imim.es>

	* src/mol.cpp bond.cpp kekulize.cpp: Kekulize function changed to
	what it was before. PerceiveBondOrders replaced by 
	NewPerceiveBondOrders. SetK* functions added to NewPerceiveBondOrders
	
2004-08-27  Michael Banck  <mbanck@gmx.net>

	* mol.h (tokenize): Initialize *delimstr to " \t\n" for the